# stroustrup-ppp-drills

./: .gitignore  LICENSE  README.md
chapter_03/: CMakeLists.txt  ch03_review.md
chapter_03/drill/: CMakeLists.txt  ch03_drill.cpp
chapter_03/exercise/e01/: CMakeLists.txt  e01.cpp
chapter_03/exercise/e02/: CMakeLists.txt  e02.cpp
chapter_03/exercise/e04/: CMakeLists.txt  e04.cpp
chapter_03/exercise/e06/: CMakeLists.txt  e06.cpp
chapter_03/exercise/e07/: CMakeLists.txt  e07.cpp
chapter_03/exercise/e08/: CMakeLists.txt  e08.cpp
chapter_03/exercise/e09/: CMakeLists.txt  e09.cpp
chapter_03/exercise/e10/: CMakeLists.txt  e10.cpp
chapter_03/exercise/e11/: CMakeLists.txt  e11.cpp
chapter_03/tt/p65/: CMakeLists.txt  ch03_tt_p65.cpp
chapter_03/tt/p68/: CMakeLists.txt  ch03_tt_p68.cpp
chapter_03/tt/p75/: CMakeLists.txt  ch03_tt_p75.cpp
chapter_03/tt/p81/: CMakeLists.txt  ch03_tt_p81.cpp
chapter_04/: CMakeLists.txt  ch04_review.md
chapter_04/drill/drill_1_to_5/: CMakeLists.txt  ch04_drill_1_to_5.cpp
chapter_04/drill/drill_6_to_11/: CMakeLists.txt  ch04_drill_6_to_11.cpp
chapter_04/exercise/e02/: CMakeLists.txt  e02.cpp
chapter_04/exercise/e03/: CMakeLists.txt  e03.cpp
chapter_04/exercise/e04/: CMakeLists.txt  e04.cpp
chapter_04/exercise/e05/: CMakeLists.txt  e05.cpp
chapter_04/exercise/e06/: CMakeLists.txt  e06.cpp
chapter_04/exercise/e07/: CMakeLists.txt  e07.cpp
chapter_04/exercise/e08/: CMakeLists.txt  e08.cpp
chapter_04/exercise/e09/: CMakeLists.txt  e09.cpp
chapter_04/exercise/e10/: CMakeLists.txt  e10.cpp
chapter_04/exercise/e11/: CMakeLists.txt  e11.cpp
chapter_04/exercise/e12/: CMakeLists.txt  e12.cpp
chapter_04/exercise/e13/: CMakeLists.txt  e13.cpp
chapter_04/exercise/e15/: CMakeLists.txt  e15.cpp
chapter_04/exercise/e16/: CMakeLists.txt  e16.cpp
chapter_04/exercise/e17/: CMakeLists.txt  e17.cpp
chapter_04/exercise/e18/: CMakeLists.txt  e18.cpp
chapter_04/exercise/e19/: CMakeLists.txt  e19.cpp
chapter_04/lib/: std_lib_facilities.h
chapter_04/tt/p105/: CMakeLists.txt  ch04_tt_p105.cpp
chapter_04/tt/p109/: CMakeLists.txt  ch04_tt_p109.cpp
chapter_04/tt/p111/: CMakeLists.txt  ch04_tt_p111.cpp
chapter_04/tt/p113/: CMakeLists.txt  ch04_tt_p113.cpp
chapter_04/tt/p116/: CMakeLists.txt  ch04_tt_p116.cpp
chapter_04/tt/p125/: CMakeLists.txt  ch04_tt_p125.cpp
chapter_05/: CMakeLists.txt
chapter_05/drill/: CMakeLists.txt  ch05_drill.cpp
chapter_05/exercise/e02/: CMakeLists.txt  e02.cpp
chapter_05/exercise/e03/: CMakeLists.txt  e03.cpp
chapter_05/exercise/e04/: CMakeLists.txt  e04.cpp
chapter_05/exercise/e05/: CMakeLists.txt  e05.cpp
chapter_05/exercise/e06/: CMakeLists.txt  e06.cpp
chapter_05/exercise/e07/: CMakeLists.txt  e07.cpp
chapter_05/exercise/e08/: CMakeLists.txt  e08.cpp
chapter_05/exercise/e09/: CMakeLists.txt  e09.cpp
chapter_05/exercise/e10/: CMakeLists.txt  e10.cpp
chapter_05/exercise/e11/: CMakeLists.txt  e11.cpp
chapter_05/exercise/e12/: CMakeLists.txt  e12.cpp
chapter_05/exercise/e14/: CMakeLists.txt
chapter_05/tt/p138_p139/: CMakeLists.txt  ch05_tt_p138_p139.cpp
chapter_05/tt/p146/: CMakeLists.txt  ch05_tt_p146.cpp
chapter_05/tt/p153/: CMakeLists.txt  ch05_tt_p153.cpp
chapter_05/tt/p155_p156/: CMakeLists.txt  ch05_tt_p155_p156.cpp
chapter_05/tt/p157/: CMakeLists.txt  ch05_tt_p157.cpp
chapter_05/tt/p166/: CMakeLists.txt  ch05_tt_p166.cpp
chapter_06/: CMakeLists.txt  ch06_review.md
chapter_06/drill/: CMakeLists.txt  ch06_drill.cpp
chapter_06/exercise/e02/: CMakeLists.txt  e02.cpp
chapter_06/exercise/e03/: CMakeLists.txt  e03.cpp
chapter_06/exercise/e04/: CMakeLists.txt  e04.cpp
chapter_06/exercise/e05/: CMakeLists.txt  e05.cpp
chapter_06/exercise/e07/: e07_bitwise_grammar.md
chapter_06/exercise/e08/: CMakeLists.txt  e08.cpp
chapter_06/exercise/e09/: CMakeLists.txt  e09.cpp
chapter_06/exercise/e10/: CMakeLists.txt  e10.cpp
chapter_06/lib/: std_lib_facilities.h
chapter_07/: CMakeLists.txt  ch07_review.md
chapter_07/drill/drill_1_5/: CMakeLists.txt  ch07_drill_1_to_5.cpp
chapter_07/drill/drill_6_11/: CMakeLists.txt  ch07_drill_6_to_11.cpp
chapter_07/exercise/e01/: CMakeLists.txt  e01.cpp
chapter_07/exercise/e02/: CMakeLists.txt  e02.cpp
chapter_07/exercise/e03/: CMakeLists.txt  e03.cpp
chapter_07/exercise/e04/: CMakeLists.txt  e04.cpp
chapter_07/exercise/e05/: CMakeLists.txt  e05.cpp
chapter_07/exercise/e06/: CMakeLists.txt  e06.cpp
chapter_07/exercise/e08/: e08_revised_grammar.md
chapter_07/exercise/e09/: CMakeLists.txt  e09.cpp  e09_calc_improvements.md
chapter_07/exercise/e10/: CMakeLists.txt  e10.cpp
chapter_07/lib/: std_lib_facilities.h
chapter_07/tt/: CMakeLists.txt  ch07_tt.cpp
chapter_08/: CMakeLists.txt  ch08_review.md
chapter_08/drill/drill_1/: CMakeLists.txt  ch08_drill_01.cpp  my.cpp
chapter_08/drill/drill_2/: CMakeLists.txt  ch08_drill_02.cpp
chapter_08/drill/drill_3/: CMakeLists.txt  ch08_drill_03.cpp
chapter_08/exercise/e01/: CMakeLists.txt  e01.cpp
chapter_09/: CMakeLists.txt  ch09_review.md
chapter_09/lib/: help.cpp  help.h
chapter_10/: CMakeLists.txt  ch10_review.md  ch10_test.cpp
chapter_11/: CMakeLists.txt  ch11_review.md  main.cpp  util.cpp  util.h
chapter_11/lib/: help.cpp  help.h
chapter_12/: CMakeLists.txt  ch12_review.md
chapter_12/drill/: CMakeLists.txt  drill.cpp  drill.h
chapter_12/lib/: Graph.cpp  Simple_window.cpp  Window.h
chapter_13/: CMakeLists.txt  ch13_review.md
chapter_13/drill/: CMakeLists.txt  drill.cpp  drill.h
chapter_13/lib/: Debug_window.h  Graph.cpp  Graph.h
chapter_14/: CMakeLists.txt  ch14_review.md
chapter_14/drill/: CMakeLists.txt  drill.cpp  drill.h
chapter_14/lib/: Graph.cpp  Graph.h
chapter_15/: CMakeLists.txt  ch15_review.md
chapter_15/drill/: CMakeLists.txt  drill.cpp
chapter_15/lib/: Debug_window.h  Graph.cpp  Graph.h
chapter_16/: CMakeLists.txt  ch16_review.md
chapter_16/lib/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Window.cpp  Window.h
gui_examples/: 12.cpp  CMakeLists.txt  Graph.cpp  Window.cpp  test.cpp  test2.cpp
(+818 files in other folders)
